utils/moon-helm/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/aws-weight: '0'
    external-dns.alpha.kubernetes.io/set-identifier: example-cluster
  labels:
    app: moon
    app.kubernetes.io/instance: sandbox-moon
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: moon
    argocd.argoproj.io/instance: moon
    name: moon
  name: moon-ingress-test
  namespace: default
spec:
  ingressClassName: alb
  rules:
    - host: moon-test1.sandbox.phreesia.services
      http:
        paths:
          - backend:
              service:
                name: moon
                port:
                  number: 8080
            path: /
            pathType: Prefix
